force-app/main/default/objects/ServiceAgentCopilotEvents__dlm/fields/ActionId__c.field-meta.xml
<CustomField>
    <fullName>ActionId__c</fullName>
    <label>Action ID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>