force-app/main/default/objects/ServiceAgentCopilotEvents__dlm/fields/ActionName__c.field-meta.xml
<CustomField>
    <fullName>ActionName__c</fullName>
    <label>Action Name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>