force-app/main/default/objects/ServiceAgentCopilotEvents__dlm/fields/ConversationEventLogType__c.field-meta.xml
<CustomField>
    <fullName>ConversationEventLogType__c</fullName>
    <label>Conversation Event Log Type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConversationEventLogType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>