force-app/main/default/objects/ServiceAgentCopilotEvents__dlm/fields/PreviousEventLogUuid__c.field-meta.xml
<CustomField>
    <fullName>PreviousEventLogUuid__c</fullName>
    <label>Previous Event Log UUID</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <invalidMergeActionType>Drop</invalidMergeActionType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousEventLogUuid</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>